# RAGConnect

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile.lightrag  Dockerfile.server  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
client_gateway/: audit.py  config.py  context.py  local_service.py  mcp_server.py  project_registry.py  router.py  server_client.py  web_server.py
config/: AGENTS.md.example  CLAUDE.md.example  client_config.example.yaml  server_tokens.example.yaml
config/prompts/: global.md  rules.md
docs/: server-reconfigure-runbook.md
lightrag_server/: start.sh
local_embeddings/: __init__.py  proxy.py
scripts/macos/: install-autostart.sh  install-claude-mcp.sh  install-codex-mcp.sh  install-local-stack.sh  install-mcp.sh  install-vscode-mcp.sh  start-local-stack.sh  stop-local-stack.sh  uninstall-autostart.sh
scripts/windows/: install-autostart.ps1  install-claude-mcp.ps1  install-codex-mcp.ps1  install-cursor-mcp.ps1  install-local-stack.ps1  install-mcp.ps1  install-vscode-mcp.ps1  start-local-stack.ps1  stop-local-stack.ps1  uninstall-autostart.ps1
server_gateway/: app.py  audit.py  auth.py  cli.py  host_helper.py  token_store.py
shared/: control_plane.py  dotenv.py  errors.py  lightrag_client.py  models.py  ops_log.py  runtime.py  timeouts.py
tests/: test_context.py  test_host_helper.py  test_project_registry.py
